# bevy_granite

./: .gitignore  Cargo.toml  README.md  cargo.toml
crates/bevy_granite_core/: Cargo.toml
crates/bevy_granite_core/config/: versions.toml
crates/bevy_granite_core/src/: events.rs  lib.rs  setup.rs
crates/bevy_granite_core/src/assets/: mod.rs  plugin.rs
crates/bevy_granite_core/src/entities/: component_editor.rs  deserialize.rs  generate_tangents.rs  mod.rs  (+3 more)
crates/bevy_granite_editor/: Cargo.toml
crates/bevy_granite_editor/config/: config.toml
crates/bevy_granite_editor/src/: lib.rs  setup.rs  utils.rs
crates/bevy_granite_expose/: Cargo.toml
crates/bevy_granite_expose/src/: lib.rs
crates/bevy_granite_gizmos/: Cargo.toml
crates/bevy_granite_gizmos/src/: camera.rs  lib.rs
crates/bevy_granite_gizmos/src/gizmos/: distance_scaling.rs  events.rs  manager.rs  mod.rs  plugin.rs
crates/bevy_granite_gizmos/src/gizmos/rotate/: drag.rs  gizmo.rs  mod.rs
crates/bevy_granite_gizmos/src/gizmos/transform/: axis_line.rs  drag.rs  gizmo.rs  mod.rs
crates/bevy_granite_gizmos/src/input/: change_gizmo.rs  drag.rs  mod.rs  plugin.rs
crates/bevy_granite_gizmos/src/selection/: duplicate.rs  events.rs  manager.rs  mod.rs  plugin.rs  ray.rs
crates/bevy_granite_gizmos/src/ui/: mod.rs  panel.rs  plugin.rs
crates/bevy_granite_logging/: Cargo.toml
crates/bevy_granite_logging/src/: buffer.rs  config.rs  entry.rs  file.rs  lib.rs  macros.rs  output.rs
crates/bevy_granite_macros/: Cargo.toml
crates/bevy_granite_macros/src/: lib.rs
examples/: main.rs
src/: lib.rs
(+126 files in other folders)
