[package]
name = "bevy_granite_gizmos"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy_obj = { workspace = true }
native-dialog = { workspace = true }
uuid = { workspace = true }

bevy_granite_logging = { path = "../bevy_granite_logging"}
bevy_granite_core = { path = "../bevy_granite_core"}

bevy_mod_raycast = "0.18.0"

[lib]
name = "bevy_granite_gizmos"
path = "src/lib.rs"
